external-crates/move/crates/move-compiler/tests/move_check/unit_test/test_and_test_only_annotation@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/test_and_test_only_annotation.move:4:7
  │
4 │     #[test(_a=@0x1, _b=@0x2)]
  │       ^^^^^^^^^^^^^^^^^^^^^^
  │       │
  │       Arguments are no longer supported in `#[test]` attributes
  │       Ignoring these arguments

error[E10004]: invalid usage of known attribute
  ┌─ tests/move_check/unit_test/test_and_test_only_annotation.move:5:7
  │
4 │     #[test(_a=@0x1, _b=@0x2)]
  │       ---------------------- Previously annotated here
5 │     #[test_only]
  │       ^^^^^^^^^ function annotated as both #[test_only] and #[test]. You need to declare it as either one or the other

warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/test_and_test_only_annotation.move:6:5
  │
6 │     public fun boo(_a: signer, _b: signer) { }
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
  │
  = Test functions with arguments have been deprecated
  = If you would like to test functions with random inputs, consider using '#[rand_test]' instead
